[gd_scene load_steps=10 format=3 uid="uid://du7kau181iy6a"]

[ext_resource type="TileSet" uid="uid://d0oajt6532000" path="res://Scenes/world.tres" id="1_4af6t"]
[ext_resource type="Script" path="res://Scripts/bank_interior.gd" id="1_bfqo0"]
[ext_resource type="Texture2D" uid="uid://dgulh2aqn6mqe" path="res://assets/sprites/whiteBackground.png" id="2_docdt"]
[ext_resource type="PackedScene" uid="uid://b4ssvypll7ghh" path="res://Scenes/interior_light.tscn" id="3_ju5oa"]
[ext_resource type="Texture2D" uid="uid://bcnis8u7rfonu" path="res://assets/sprites/lights/overlays/hole.png" id="4_fcmrt"]
[ext_resource type="Texture2D" uid="uid://d3b86edqbfc57" path="res://assets/sprites/lights/overlays/lattice.png" id="6_eq38l"]
[ext_resource type="PackedScene" uid="uid://lc76mpacso37" path="res://interaction/interaction area/interaction_area.tscn" id="7_ak238"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nu1t2"]
size = Vector2(34, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmh25"]
size = Vector2(33, 16)

[node name="BankInterior" type="Node2D"]
script = ExtResource("1_bfqo0")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(339, 71.9996)
scale = Vector2(14.0417, 11)
texture = ExtResource("2_docdt")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_4af6t")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(1245189, 1441792, 0, 1245190, 1441792, 0, 851973, 1310720, 1, 851974, 1376256, 1, 786438, 1376256, 0, 786437, 1310720, 0, 917505, 1441792, 0, 983041, 1441792, 0, 1048577, 1441792, 0, 1114113, 1441792, 0, 1179649, 1441792, 0, 917506, 1441792, 0, 983042, 1441792, 0, 1048578, 1441792, 0, 1114114, 1441792, 0, 1179650, 1441792, 0, 917507, 1441792, 0, 983043, 1441792, 0, 1048579, 1441792, 0, 1114115, 1441792, 0, 1179651, 1441792, 0, 917508, 1441792, 0, 983044, 1441792, 0, 1048580, 1441792, 0, 1114116, 1441792, 0, 1179652, 1441792, 0, 917509, 1441792, 0, 983045, 1441792, 0, 1048581, 1441792, 0, 1114117, 1441792, 0, 1179653, 1441792, 0, 917510, 1441792, 0, 983046, 1441792, 0, 1048582, 1441792, 0, 1114118, 1441792, 0, 1179654, 1441792, 0, 917511, 1441792, 0, 983047, 1441792, 0, 1048583, 1441792, 0, 1114119, 1441792, 0, 1179655, 1441792, 0, 917512, 1441792, 0, 983048, 1441792, 0, 1048584, 1441792, 0, 1114120, 1441792, 0, 1179656, 1441792, 0, 917513, 1441792, 0, 983049, 1441792, 0, 1048585, 1441792, 0, 1114121, 1441792, 0, 1179657, 1441792, 0, 917514, 1441792, 0, 983050, 1441792, 0, 1048586, 1441792, 0, 1114122, 1441792, 0, 1179658, 1441792, 0, 1245191, 1441792, 0, 1245192, 1441792, 0, 1245193, 1441792, 0, 1245194, 1441792, 1, 1245185, 1441792, 1, 1245186, 1441792, 0, 1245187, 1441792, 0, 1245188, 1441792, 0, 1310725, 1441792, 0, 1310726, 1441792, 0, 327681, 1441792, 0, 393217, 1441792, 0, 458753, 1441792, 0, 524289, 1441792, 1, 589825, 1441792, 0, 655361, 1441792, 0, 720897, 1441792, 0, 786433, 1441792, 0, 851969, 1441792, 0, 327682, 1441792, 0, 393218, 1441792, 0, 458754, 1441792, 0, 524290, 1441792, 0, 589826, 1441792, 0, 655362, 1441792, 0, 720898, 1441792, 0, 786434, 1441792, 0, 851970, 1441792, 0, 327683, 1441792, 0, 393219, 1441792, 0, 458755, 1441792, 0, 524291, 1441792, 0, 589827, 1441792, 0, 655363, 1441792, 0, 720899, 1441792, 0, 786435, 1441792, 0, 851971, 1441792, 0, 327684, 1441792, 0, 393220, 1441792, 0, 458756, 1441792, 0, 524292, 1441792, 0, 589828, 1441792, 0, 655364, 1441792, 0, 720900, 1441792, 0, 786436, 1441792, 0, 851972, 1441792, 0, 327685, 1441792, 0, 393221, 1441792, 0, 458757, 1441792, 0, 524293, 1441792, 0, 589829, 1441792, 0, 655365, 1441792, 0, 720901, 1441792, 0, 327686, 1441792, 0, 393222, 1441792, 0, 458758, 1441792, 0, 524294, 1441792, 0, 589830, 1441792, 0, 655366, 1441792, 0, 720902, 1441792, 0, 327687, 1441792, 0, 393223, 1441792, 0, 458759, 1441792, 0, 524295, 1441792, 0, 589831, 1441792, 0, 655367, 1441792, 0, 720903, 1441792, 0, 327688, 1441792, 0, 393224, 1441792, 0, 458760, 1441792, 0, 524296, 1441792, 0, 589832, 1441792, 0, 655368, 1441792, 0, 720904, 1441792, 0, 327689, 1441792, 0, 393225, 1441792, 0, 458761, 1441792, 0, 524297, 1441792, 0, 589833, 1441792, 0, 655369, 1441792, 0, 720905, 1441792, 0, 786439, 1441792, 0, 851975, 1441792, 0, 786440, 1441792, 0, 851976, 1441792, 0, 786441, 1441792, 0, 851977, 1441792, 0, 786442, 1441792, 0, 851978, 1441792, 0, 327690, 1441792, 0, 393226, 1441792, 0, 458762, 1441792, 0, 524298, 1441792, 1, 589834, 1441792, 0, 655370, 1441792, 0, 720906, 1441792, 0, 65537, 1441792, 0, 131073, 1441792, 0, 196609, 1441792, 0, 262145, 1441792, 0, 65538, 1441792, 0, 131074, 1441792, 0, 196610, 1441792, 0, 262146, 1441792, 0, 65539, 1441792, 0, 131075, 1441792, 0, 196611, 1441792, 0, 262147, 1441792, 0, 65540, 1441792, 0, 131076, 1441792, 0, 196612, 1441792, 0, 262148, 1441792, 0, 65541, 1441792, 0, 131077, 1441792, 0, 196613, 1441792, 0, 262149, 1441792, 0, 65542, 1441792, 0, 131078, 1441792, 0, 196614, 1441792, 0, 262150, 1441792, 0, 65543, 1441792, 0, 131079, 1441792, 0, 196615, 1441792, 0, 262151, 1441792, 0, 65544, 1441792, 0, 131080, 1441792, 0, 196616, 1441792, 0, 262152, 1441792, 0, 65545, 1441792, 0, 131081, 1441792, 0, 196617, 1441792, 0, 262153, 1441792, 0, 65546, 1441792, 0, 131082, 1441792, 0, 196618, 1441792, 0, 262154, 1441792, 0, 786443, 1441792, 0, 851979, 1441792, 0, 917515, 1441792, 0, 786444, 1441792, 0, 851980, 1441792, 0, 917516, 1441792, 0, 786445, 1441792, 0, 851981, 1441792, 0, 917517, 1441792, 0, 786446, 1441792, 0, 851982, 1441792, 0, 917518, 1441792, 0, 786447, 1441792, 0, 851983, 1441792, 0, 917519, 1441792, 0, 786448, 1441792, 0, 851984, 1441792, 0, 917520, 1441792, 0, 786449, 1441792, 0, 851985, 1441792, 0, 917521, 1441792, 0, 786450, 1441792, 0, 851986, 1441792, 0, 917522, 1441792, 0, 655379, 1441792, 0, 720915, 1441792, 0, 786451, 1441792, 0, 851987, 1441792, 0, 917523, 1441792, 0, 983059, 1441792, 0, 1048595, 1441792, 0, 1114131, 1441792, 0, 1179667, 1441792, 0, 655380, 1441792, 0, 720916, 1441792, 0, 786452, 1441792, 0, 851988, 1441792, 0, 917524, 1441792, 0, 983060, 1441792, 0, 1048596, 1441792, 0, 1114132, 1441792, 0, 1179668, 1441792, 1, 655381, 1441792, 0, 720917, 1441792, 0, 786453, 1441792, 0, 851989, 1441792, 0, 917525, 1441792, 0, 983061, 1441792, 0, 1048597, 1441792, 0, 1114133, 1441792, 0, 1179669, 1441792, 0, 655382, 1441792, 0, 720918, 1441792, 0, 786454, 1441792, 0, 851990, 1441792, 0, 917526, 1441792, 0, 983062, 1441792, 0, 1048598, 1441792, 0, 1114134, 1441792, 0, 1179670, 1441792, 0, 655383, 1441792, 0, 720919, 1441792, 0, 786455, 1441792, 0, 851991, 1441792, 0, 917527, 1441792, 0, 983063, 1441792, 0, 1048599, 1441792, 0, 1114135, 1441792, 0, 1179671, 1441792, 0, 655384, 1441792, 0, 720920, 1441792, 0, 786456, 1441792, 0, 851992, 1441792, 0, 917528, 1441792, 0, 983064, 1441792, 0, 1048600, 1441792, 0, 1114136, 1441792, 0, 1179672, 1441792, 0, 655385, 1441792, 0, 720921, 1441792, 0, 786457, 1441792, 0, 851993, 1441792, 0, 917529, 1441792, 0, 983065, 1441792, 0, 1048601, 1441792, 0, 1114137, 1441792, 0, 1179673, 1441792, 0, 655386, 1441792, 0, 720922, 1441792, 0, 786458, 1441792, 0, 851994, 1441792, 0, 917530, 1441792, 0, 983066, 1441792, 0, 1048602, 1441792, 0, 1114138, 1441792, 0, 1179674, 1441792, 0, 655387, 1441792, 0, 720923, 1441792, 0, 786459, 1441792, 0, 851995, 1441792, 0, 917531, 1441792, 0, 983067, 1441792, 0, 1048603, 1441792, 0, 1114139, 1441792, 0, 1179675, 1441792, 0, 655388, 1441792, 0, 720924, 1441792, 0, 786460, 1441792, 0, 851996, 1441792, 0, 917532, 1441792, 0, 983068, 1441792, 0, 1048604, 1441792, 0, 1114140, 1441792, 0, 1179676, 1441792, 0, 655389, 1441792, 0, 720925, 1441792, 0, 786461, 1441792, 0, 851997, 1441792, 0, 917533, 1441792, 0, 983069, 1441792, 0, 1048605, 1441792, 0, 1114141, 1441792, 0, 1179677, 1441792, 0, 655390, 1441792, 0, 720926, 1441792, 0, 786462, 1441792, 0, 851998, 1441792, 0, 917534, 1441792, 0, 983070, 1441792, 0, 1048606, 1441792, 0, 1114142, 1441792, 0, 1179678, 1441792, 0, 458771, 1441792, 0, 524307, 1441792, 0, 589843, 1441792, 0, 458772, 1441792, 0, 524308, 1441792, 0, 589844, 1441792, 0, 458773, 1441792, 0, 524309, 1441792, 0, 589845, 1441792, 0, 458774, 1441792, 0, 524310, 1441792, 0, 589846, 1441792, 0, 458775, 1441792, 0, 524311, 1441792, 0, 589847, 1441792, 0, 458776, 1441792, 0, 524312, 1441792, 0, 589848, 1441792, 0, 458777, 1441792, 0, 524313, 1441792, 0, 589849, 1441792, 0, 458778, 1441792, 0, 524314, 1441792, 0, 589850, 1441792, 0, 458779, 1441792, 0, 524315, 1441792, 0, 589851, 1441792, 0, 458780, 1441792, 0, 524316, 1441792, 0, 589852, 1441792, 0, 458781, 1441792, 0, 524317, 1441792, 0, 589853, 1441792, 0, 458782, 1441792, 0, 524318, 1441792, 0, 589854, 1441792, 0, 458783, 1441792, 0, 524319, 1441792, 0, 589855, 1441792, 0, 655391, 1441792, 0, 720927, 1441792, 0, 786463, 1441792, 0, 851999, 1441792, 0, 917535, 1441792, 0, 983071, 1441792, 0, 1048607, 1441792, 0, 1114143, 1441792, 0, 1179679, 1441792, 0, 327700, 1441792, 0, 393236, 1441792, 1, 1245204, 1441792, 0, 327701, 1441792, 0, 393237, 1441792, 0, 1245205, 1441792, 0, 327702, 1441792, 0, 393238, 1441792, 0, 1245206, 1441792, 0, 327703, 1441792, 0, 393239, 1441792, 0, 1245207, 1441792, 0, 327704, 1441792, 0, 393240, 1441792, 0, 1245208, 1441792, 0, 327705, 1441792, 0, 393241, 1441792, 0, 1245209, 1441792, 0, 327706, 1441792, 0, 393242, 1441792, 0, 1245210, 1441792, 0, 327707, 1441792, 0, 393243, 1441792, 0, 1245211, 1441792, 0, 327708, 1441792, 0, 393244, 1441792, 0, 1245212, 1441792, 0, 327709, 1441792, 0, 393245, 1441792, 0, 1245213, 1441792, 0, 327710, 1441792, 0, 393246, 1441792, 0, 1245214, 1441792, 0, 327711, 1441792, 0, 393247, 1441792, 0, 1245215, 1441792, 0, 327712, 1441792, 0, 393248, 1441792, 1, 458784, 1441792, 0, 524320, 1441792, 0, 589856, 1441792, 0, 655392, 1441792, 0, 720928, 1441792, 0, 786464, 1441792, 0, 852000, 1441792, 0, 917536, 1441792, 0, 983072, 1441792, 0, 1048608, 1441792, 0, 1114144, 1441792, 0, 1179680, 1441792, 1, 1245216, 1441792, 0, 327713, 1441792, 0, 393249, 1441792, 0, 458785, 1441792, 0, 524321, 1441792, 0, 589857, 1441792, 0, 655393, 1441792, 0, 720929, 1441792, 0, 786465, 1441792, 0, 852001, 1441792, 0, 917537, 1441792, 0, 983073, 1441792, 0, 1048609, 1441792, 0, 1114145, 1441792, 0, 1179681, 1441792, 0, 1245217, 1441792, 0, 327699, 1441792, 0, 393235, 1441792, 0, 1245203, 1441792, 0)
layer_1/name = "wall"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(720896, 720896, 3, 65536, 720896, 3, 131072, 720896, 3, 196608, 720896, 3, 262144, 720896, 3, 327680, 720896, 3, 393216, 720896, 3, 458752, 917504, 2, 524288, 720896, 3, 589824, 720896, 3, 655360, 720896, 3, 0, 786432, 2, 11, 851968, 2, 65547, 720896, 3, 131083, 720896, 3, 262155, 720896, 3, 327691, 720896, 3, 655371, 720896, 3, 786432, 720896, 3, 1, 655360, 2, 2, 655360, 2, 3, 655360, 2, 4, 655360, 2, 5, 655360, 2, 6, 655360, 2, 7, 655360, 2, 8, 655360, 2, 9, 655360, 2, 10, 655360, 2, 851968, 720896, 3, 917504, 720896, 3, 983040, 720896, 3, 1048576, 720896, 3, 1114112, 720896, 3, 1179648, 720896, 3, 1245184, 720896, 3, 1310720, 786432, 3, 1310721, 655360, 2, 1310722, 655360, 2, 1310723, 655360, 2, 1310724, 720896, 2, 1310727, 589824, 2, 1310728, 655360, 2, 1310729, 655360, 2, 1310730, 655360, 2, 1310731, 851968, 3, 983051, 786432, 2, 1048587, 720896, 3, 1114123, 720896, 3, 1179659, 720896, 3, 1245195, 720896, 3, 196619, 720896, 3, 393227, 720896, 3, 458763, 917504, 3, 524299, 720896, 3, 589835, 720896, 3, 720907, 786432, 3, 720908, 655360, 2, 720909, 655360, 2, 720910, 655360, 2, 720911, 655360, 2, 720912, 655360, 2, 720913, 655360, 2, 720914, 655360, 2, 983052, 655360, 2, 983053, 655360, 2, 983054, 655360, 2, 983055, 655360, 2, 983056, 655360, 2, 983057, 655360, 2, 983058, 655360, 2, 720915, 851968, 3, 393235, 720896, 3, 458771, 720896, 3, 524307, 720896, 3, 589843, 720896, 3, 655379, 720896, 3, 1048595, 720896, 3, 1114131, 720896, 3, 1179667, 720896, 3, 983059, 851968, 2, 1245203, 786432, 3, 1245217, 851968, 3, 327713, 851968, 2, 327699, 786432, 2, 327700, 655360, 2, 327701, 655360, 2, 327702, 655360, 2, 327703, 655360, 2, 327704, 655360, 2, 327705, 655360, 2, 327706, 655360, 2, 327707, 655360, 2, 327708, 655360, 2, 327709, 655360, 2, 327710, 655360, 2, 327711, 655360, 2, 327712, 655360, 2, 393249, 720896, 3, 458785, 720896, 3, 524321, 720896, 3, 589857, 720896, 3, 655393, 720896, 3, 720929, 720896, 3, 786465, 720896, 3, 852001, 720896, 3, 917537, 720896, 3, 983073, 720896, 3, 1048609, 720896, 3, 1114145, 720896, 3, 1179681, 720896, 3, 1245204, 655360, 2, 1245205, 655360, 2, 1245206, 655360, 2, 1245207, 655360, 2, 1245208, 655360, 2, 1245209, 655360, 2, 1245210, 655360, 2, 1245211, 655360, 2, 1245212, 655360, 2, 1245213, 655360, 2, 1245214, 655360, 2, 1245215, 655360, 2, 1245216, 655360, 2, 458753, 655360, 2, 458754, 655360, 2, 458755, 655360, 2, 458756, 655360, 2, 458757, 655360, 2, 458758, 655360, 2, 458762, 655360, 2, 458761, 655360, 2, 458759, 655360, 2, 458760, 655360, 2)
layer_2/name = "decoration"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(458760, 1638400, 21, 458756, 2228224, 6, 458757, 2293760, 6, 458758, 2359296, 6)

[node name="InteriorSpawn" type="Marker2D" parent="."]
position = Vector2(96, 306)

[node name="Hole" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(98, 211)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_fcmrt")

[node name="Lattice" type="Sprite2D" parent="."]
position = Vector2(203.323, 215.74)
rotation = 1.5708
scale = Vector2(0.161164, 0.302505)
texture = ExtResource("6_eq38l")

[node name="Lattice2" type="Sprite2D" parent="."]
position = Vector2(253, 216)
rotation = 1.5708
scale = Vector2(0.161164, 0.302505)
texture = ExtResource("6_eq38l")

[node name="Lattice3" type="Sprite2D" parent="."]
position = Vector2(296, 216)
rotation = 1.5708
scale = Vector2(0.161164, 0.302505)
texture = ExtResource("6_eq38l")

[node name="InteractionArea" parent="." instance=ExtResource("7_ak238")]
position = Vector2(94, 375)
action_name = "Unlock"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(2, -53.5)
shape = SubResource("RectangleShape2D_nu1t2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(96.5, 328)
shape = SubResource("RectangleShape2D_rmh25")

[node name="Lights" type="Node2D" parent="."]

[node name="InteriorLight" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(46, 115)

[node name="InteriorLight2" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(164, 115)

[node name="InteriorLight5" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(249, 180)

[node name="InteriorLight6" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(354, 85)

[node name="InteriorLight7" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(506, 85)

[node name="InteriorLight3" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(150, 321)
rotation = -3.14159

[node name="InteriorLight8" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(368, 306)
rotation = -3.14159

[node name="InteriorLight9" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(490, 306)
rotation = -3.14159

[node name="InteriorLight4" parent="Lights" instance=ExtResource("3_ju5oa")]
position = Vector2(44, 320)
rotation = -3.14159

[node name="DefaultLight" parent="Lights" groups=["default_light"] instance=ExtResource("3_ju5oa")]
position = Vector2(112, 327)
rotation = 1.5708
scale = Vector2(0.3, 0.3)

[node name="PointLight2D" parent="Lights/DefaultLight" index="1"]
shadow_enabled = false

[node name="PointLight2D2" parent="Lights/DefaultLight" index="2"]
shadow_enabled = false

[node name="DefaultLight2" parent="Lights" groups=["default_light"] instance=ExtResource("3_ju5oa")]
position = Vector2(79, 328)
rotation = -1.5708
scale = Vector2(0.3, 0.3)

[node name="PointLight2D" parent="Lights/DefaultLight2" index="1"]
shadow_enabled = false

[node name="PointLight2D2" parent="Lights/DefaultLight2" index="2"]
shadow_enabled = false

[editable path="Lights/DefaultLight"]
[editable path="Lights/DefaultLight2"]
